[tool.poetry]
name = "plotly-lib"
version = "0.1.0"
description = "A custom theme for Plotly graphs"
authors = ["lottedieleman <lotte.dieleman@gmail.com>"]
readme = "README.md"
packages = [
    { include = "lib_plotly" }  # Include the `lib_plotly` package directory
]


[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
plotly = ">=5.24.1,<7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



